--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -1,248 +1,245 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>Wind Breaker - Season 1</title>
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
   <style>
-    body {
+    body, html {
+      margin: 0; padding: 0; height: 100%; width: 100%;
       font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
+      background: #000; color: #fff;
+      overflow: hidden;
     }
-    html, body {
-      user-select: none;
-      scroll-behavior: smooth;
+    #mainWrapper { display: flex; flex-direction: column; height: 100%; }
+    header, footer { flex-shrink: 0; padding: 0.5rem; background: rgba(0,0,0,0.7); }
+    #videoWrapper {
+      position: relative; flex-grow: 1; background: #000;
     }
-    .video-container {
-      position: relative;
-      padding-top: 56.25%;
-      background-color: black;
+    #videoPlayer, .video-overlay {
+      position: absolute; top: 0; left: 0;
+      width: 100%; height: 100%;
     }
-    .video-container iframe, .video-overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    .video-overlay {
-      z-index: 2;
-      background: transparent;
-    }
+    .video-overlay { z-index: 2; pointer-events: none; }
     .controls {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
+      position: absolute; bottom: 1rem; left: 50%;
       transform: translateX(-50%);
-      display: flex;
-      gap: 10px;
-      z-index: 3;
-      flex-wrap: wrap;
+      display: flex; gap: 0.5rem;
+      z-index: 3; opacity: 1; transition: opacity 0.3s;
     }
+    .controls.hide { opacity: 0; }
     .control-btn {
-      background-color: rgba(0,0,0,0.6);
-      color: white;
-      border: none;
-      padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-      font-size: 18px;
+      background: rgba(0,0,0,0.7); padding: 0.5rem;
+      border-radius: 9999px; cursor: pointer; font-size: 1.2rem;
+      pointer-events: auto;
     }
-    .theme-toggle, .neon-toggle {
-      position: absolute;
-      top: 10px;
-      padding: 10px;
-      border-radius: 50%;
-      cursor: pointer;
-      z-index: 3;
+    .bottom-bar {
+      position: absolute; bottom: 0; left: 0; width: 100%;
+      display: flex; align-items: center; padding: 0.5rem;
+      gap: 0.5rem; background: rgba(0,0,0,0.5); z-index: 3;
     }
-    .theme-toggle {
-      right: 50px;
-      background-color: rgba(0,0,0,0.6);
+    .progress {
+      flex-grow: 1; height: 4px; background: rgba(255,255,255,0.3);
+      border-radius: 2px; cursor: pointer; position: relative;
     }
-    .neon-toggle {
-      right: 10px;
-      background-color: rgba(255,255,0,0.6);
+    .progress-filled {
+      height: 100%; width: 0; background: #ff0066; border-radius: 2px;
     }
-    .neon .control-btn {
-      box-shadow: 0 0 10px #0ff, 0 0 20px #0ff;
+    .side-panel-toggle {
+      position: fixed; top: 1rem; right: 1rem;
+      background: rgba(0,0,0,0.7); padding: 0.5rem; border-radius: 0.5rem;
+      cursor: pointer; z-index: 10;
+    }
+    .side-panel {
+      position: fixed; top: 3rem; right: 1rem; background: rgba(0,0,0,0.8);
+      padding: 1rem; border-radius: 0.5rem; display: none; flex-direction: column;
+      gap: 0.5rem; z-index: 10;
+    }
+    .side-panel.active { display: flex; }
+    .theme-option, .neon-option { cursor: pointer; padding: 0.3rem 0.6rem; border-radius: 0.3rem; }
+    .neon .control-btn, .neon .side-panel, .neon .side-panel-toggle {
+      box-shadow: 0 0 10px currentColor, 0 0 20px currentColor;
     }
   </style>
 </head>
-<body class="bg-gray-900 text-white">
-  <div class="max-w-5xl mx-auto px-4 py-6">
-    <header class="flex flex-col sm:flex-row sm:items-center justify-between mb-6">
-      <div class="flex gap-3 mb-3 sm:mb-0 order-2 sm:order-1">
-        <a href="support.html" class="bg-purple-700 hover:bg-purple-800 px-3 py-2 rounded text-white">Support Us</a>
-        <a href="index.2.html" class="bg-purple-700 hover:bg-purple-800 px-3 py-2 rounded text-white">Go Back</a>
+<body>
+  <div id="mainWrapper">
+    <header class="flex justify-between items-center text-white">
+      <div class="flex gap-2">
+        <a href="support.html" class="bg-purple-600 px-3 py-1 rounded">Support Us</a>
+        <a href="index.2.html" class="bg-purple-600 px-3 py-1 rounded">← Go Back</a>
       </div>
-      <h1 class="text-3xl font-bold text-purple-400 order-1 sm:order-2">Wind Breaker - Season 1</h1>
-    </header><div class="mb-4">
-  <input type="text" id="searchBox" oninput="searchEpisodes()" placeholder="Search episodes..." class="w-full p-2 mb-4 bg-gray-800 text-white rounded" />
-</div>
+      <h1 class="text-xl font-bold">Wind Breaker - Season 1</h1>
+    </header>
 
-<div id="videoWrapper" class="video-container rounded-xl shadow-lg overflow-hidden relative">
-  <div id="videoPlayer"></div>
-  <div class="video-overlay" onclick="handleOverlayClick(event)"></div>
-  <div class="controls" id="videoControls">
-    <button class="control-btn" onclick="seek(-10)">⏪</button>
-    <button class="control-btn" onclick="togglePlayPause()">▶️/⏸️</button>
-    <button class="control-btn" onclick="seek(10)">⏩</button>
-    <button class="control-btn" onclick="playPreviousEpisode()">⬅️</button>
-    <button class="control-btn" onclick="playNextEpisode()">➡️</button>
-    <button class="control-btn" onclick="toggleFullscreen()">⛶</button>
+    <div id="videoWrapper">
+      <div id="videoPlayer"></div>
+      <div class="video-overlay"></div>
+
+      <!-- Controls -->
+      <div class="controls" id="videoControls">
+        <button class="control-btn" onclick="seek(-15)">⏪15s</button>
+        <button class="control-btn" onclick="togglePlayPause()">▶️/⏸️</button>
+        <button class="control-btn" onclick="seek(15)">15s⏩</button>
+        <button class="control-btn" onclick="playPreviousEpisode()">⬅️Prev</button>
+        <button class="control-btn" onclick="playNextEpisode()">Next➡️</button>
+        <button class="control-btn" onclick="toggleFullscreen()">⛶</button>
+      </div>
+
+      <!-- Progress & volume bar -->
+      <div class="bottom-bar" id="bottomBar">
+        <div class="progress" id="progressBar" onclick="scrub(event)">
+          <div class="progress-filled" id="progressFilled"></div>
+        </div>
+        <input type="range" min="0" max="100" value="100" onchange="setVolume(this.value)" />
+        <select onchange="setPlaybackRate(this.value)">
+          <option value="0.25">0.25×</option>
+          <option value="0.5">0.5×</option>
+          <option value="1" selected>1×</option>
+          <option value="1.5">1.5×</option>
+          <option value="2">2×</option>
+        </select>
+        <button class="control-btn" onclick="togglePIP()">📺</button>
+      </div>
+    </div>
+
+    <div class="flex-shrink-0 p-4 bg-gray-800 text-white">
+      <input id="searchBox" oninput="searchEpisodes()" placeholder="Search episodes…" class="w-full p-2 mb-2 bg-gray-700 rounded" />
+      <div id="episodeList" class="grid grid-cols-2 sm:grid-cols-3 gap-2"></div>
+    </div>
+
+    <footer class="flex-shrink-0 p-4 bg-gray-900 text-gray-300 text-sm">
+      <h2 class="font-semibold text-white mb-1">About Wind Breaker</h2>
+      <p>Wind Breaker follows Haruka Sakura… action, heart, friendship and justice.</p>
+      <p class="mt-2">Thank you to the creators and Muse India!</p>
+    </footer>
   </div>
-  <div class="theme-toggle" onclick="cycleTheme()">🎨</div>
-  <div class="neon-toggle" onclick="toggleNeon()">⚡</div>
-</div>
 
-<div id="episodeList" class="mt-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></div>
+  <!-- Theme & Neon Panel -->
+  <div class="side-panel-toggle" onclick="togglePanel()">⚙️</div>
+  <div class="side-panel" id="sidePanel">
+    <div class="font-semibold mb-1">Themes:</div>
+    <div class="theme-option bg-black text-white" onclick="setTheme('bg-black','text-white')">Black/White</div>
+    <div class="theme-option bg-yellow-500 text-purple-800" onclick="setTheme('bg-yellow-500','text-purple-800')">Yellow/Purple</div>
+    <div class="theme-option bg-green-600 text-pink-300" onclick="setTheme('bg-green-600','text-pink-300')">Green/Pink</div>
+    <div class="theme-option bg-blue-900 text-amber-300" onclick="setTheme('bg-blue-900','text-amber-300')">Blue/Amber</div>
+    <div class="theme-option bg-gray-900 text-lime-400" onclick="setTheme('bg-gray-900','text-lime-400')">Dark/Lime</div>
+    <div class="mt-2 font-semibold mb-1">Neon Effects:</div>
+    <div class="neon-option text-pink-400" onclick="toggleNeon('text-pink-400')">Pink Neon</div>
+    <div class="neon-option text-blue-400" onclick="toggleNeon('text-blue-400')">Blue Neon</div>
+    <div class="neon-option text-green-400" onclick="toggleNeon('text-green-400')">Green Neon</div>
+    <div class="neon-option text-orange-400" onclick="toggleNeon('text-orange-400')">Orange Neon</div>
+  </div>
 
-<div class="mt-6 bg-gray-800 p-4 rounded-lg">
-  <h2 class="text-xl font-semibold mb-2">About Wind Breaker</h2>
-  <p>
-    Wind Breaker is a high-energy anime series that follows Haruka Sakura, a strong and rebellious transfer student who joins Furin High School—a school known for its fierce fighters who protect their town. As Haruka navigates intense battles and forms bonds with unlikely allies, the series blends action, heart, and powerful themes of friendship and justice.
-  </p>
-</div>
-
-<footer class="mt-10 text-sm text-center text-gray-400">
-  <p>A heartfelt thank you to the creators of <strong>Wind Breaker</strong> for bringing such an inspiring and thrilling story to life.</p>
-  <p>We also extend our gratitude to <strong>Muse India</strong> for making Wind Breaker accessible to fans across the region.</p>
-  <p class="mt-2">Thank you for everything!</p>
-</footer>
-
-  </div>  <script>
-    let player;
-    const episodes = [
-      { title: "Episode 1", link: "ne0Y0vyjxpE" },
-      { title: "Episode 2", link: "J2568cnOa1g" },
-      { title: "Episode 3", link: "QOMv17IjJAU" },
-      { title: "Episode 4", link: "MT7WzTJZCxg" },
-      { title: "Episode 5", link: "4sRfndp1vAM" },
-      { title: "Episode 6", link: "oTvQ-5BNC6w" },
-      { title: "Episode 7", link: "Em5lFIz_kxU" },
-      { title: "Episode 8", link: "SBaGblvd4mU" },
-      { title: "Episode 9", link: "43Hj2GySjgA" },
-      { title: "Episode 10", link: "TIpodnZtFP4" },
-      { title: "Episode 11", link: "_L-UG_jvnM4" },
-      { title: "Episode 12", link: "skAwsc6UL8A" },
-      { title: "Episode 13", link: "-xUk9E2iQQY" }
-    ];
+  <script>
+    let player, hideTimeout;
+    const episodes = [...Array(13)].map((_, i) => ({ title: `Episode ${i+1}`, link: ['ne0Y0vyjxpE','J2568cnOa1g','QOMv17IjJAU','MT7WzTJZCxg','4sRfndp1vAM','oTvQ-5BNC6w','Em5lFIz_kxU','SBaGblvd4mU','43Hj2GySjgA','TIpodnZtFP4','_L-UG_jvnM4','skAwsc6UL8A','-xUk9E2iQQY'][i] }));
     let currentEpisodeIndex = 0;
-    const themes = [
-      ['bg-black', 'text-white'],
-      ['bg-white', 'text-black'],
-      ['bg-yellow-100', 'text-purple-900'],
-      ['bg-purple-900', 'text-yellow-100'],
-      ['bg-green-900', 'text-pink-200'],
-      ['bg-gray-900', 'text-white'],
-      ['bg-indigo-800', 'text-pink-100'],
-      ['bg-pink-800', 'text-yellow-200'],
-      ['bg-blue-950', 'text-lime-200'],
-      ['bg-amber-900', 'text-white']
-    ];
-    let currentTheme = 0;
 
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('videoPlayer', {
-        videoId: episodes[currentEpisodeIndex].link,
-        playerVars: {
-          autoplay: 1,
-          controls: 0,
-          modestbranding: 1,
-          rel: 0,
-          cc_load_policy: 1
-        },
-        events: {
-          onReady: loadEpisodes,
-          onStateChange: handleStateChange
-        }
+        videoId: episodes[0].link,
+        playerVars: { autoplay:1, controls:0, modestbranding:1, rel:0, cc_load_policy:1 },
+        events: { onReady: initPlayer, onStateChange: onStateChange }
       });
     }
 
-    function handleOverlayClick(event) {
-      // prevent interaction with YouTube player
+    function initPlayer() {
+      loadEpisodes();
+      updateProgress();
+      setInterval(updateProgress, 500);
     }
 
-    function seek(seconds) {
-      const time = player.getCurrentTime();
-      player.seekTo(time + seconds, true);
+    function updateProgress() {
+      if (!player || !player.getCurrentTime) return;
+      const pct = (player.getCurrentTime() / player.getDuration()) * 100;
+      document.getElementById('progressFilled').style.width = pct + '%';
+    }
+
+    function scrub(e) {
+      const rect = e.currentTarget.getBoundingClientRect();
+      const pct = (e.clientX - rect.left) / rect.width;
+      player.seekTo(pct * player.getDuration(), true);
+    }
+
+    function setVolume(v) { player.setVolume(v); }
+    function setPlaybackRate(r) { player.setPlaybackRate(r); }
+    function togglePIP() {
+      const iframe = player.getIframe();
+      if (document.pictureInPictureElement) document.exitPictureInPicture();
+      else iframe.requestPictureInPicture();
     }
 
     function togglePlayPause() {
-      const state = player.getPlayerState();
-      if (state === YT.PlayerState.PLAYING) player.pauseVideo();
-      else player.playVideo();
+      const s = player.getPlayerState();
+      s === YT.PlayerState.PLAYING ? player.pauseVideo() : player.playVideo();
     }
-
-    function toggleFullscreen() {
-      const wrapper = document.getElementById("videoWrapper");
-      if (!document.fullscreenElement) wrapper.requestFullscreen();
-      else document.exitFullscreen();
-    }
-
-    function playNextEpisode() {
-      if (currentEpisodeIndex < episodes.length - 1) {
+    function seek(sec){ player.seekTo(player.getCurrentTime()+sec,true); }
+    function playNextEpisode(){
+      if (currentEpisodeIndex < episodes.length-1){
         currentEpisodeIndex++;
         player.loadVideoById(episodes[currentEpisodeIndex].link);
       }
     }
-
-    function playPreviousEpisode() {
-      if (currentEpisodeIndex > 0) {
+    function playPreviousEpisode(){
+      if (currentEpisodeIndex>0){
         currentEpisodeIndex--;
         player.loadVideoById(episodes[currentEpisodeIndex].link);
       }
     }
 
-    function loadEpisodes() {
-      const list = document.getElementById("episodeList");
-      list.innerHTML = "";
-      episodes.forEach((ep, i) => {
-        const btn = document.createElement("button");
-        btn.className = "p-3 bg-purple-700 hover:bg-purple-800 rounded-xl shadow-md text-left";
-        btn.innerHTML = `<strong>${ep.title}</strong>`;
-        btn.onclick = () => {
-          currentEpisodeIndex = i;
-          player.loadVideoById(ep.link);
-        };
-        list.appendChild(btn);
+    function toggleFullscreen(){
+      const el = document.getElementById('videoWrapper');
+      el.requestFullscreen?.() || el.webkitRequestFullscreen?.();
+    }
+
+    function onStateChange(e){
+      if (e.data === YT.PlayerState.PLAYING) {
+        document.getElementById('videoControls').classList.remove('hide');
+        clearTimeout(hideTimeout);
+        hideTimeout = setTimeout(()=>document.getElementById('videoControls').classList.add('hide'),3000);
+      }
+      if (e.data === YT.PlayerState.ENDED) playNextEpisode();
+    }
+
+    document.addEventListener('mousemove', ()=> {
+      document.getElementById('videoControls').classList.remove('hide');
+    });
+
+    function loadEpisodes(){
+      const list = document.getElementById('episodeList');
+      list.innerHTML = '';
+      episodes.forEach((ep,i)=>{
+        const b = document.createElement('button');
+        b.className='p-2 bg-purple-600 rounded text-white';
+        b.textContent=ep.title;
+        b.onclick=()=>{currentEpisodeIndex=i;player.loadVideoById(ep.link);};
+        list.appendChild(b);
       });
     }
 
-    function searchEpisodes() {
-      const value = document.getElementById("searchBox").value.toLowerCase();
-      const list = document.getElementById("episodeList");
-      list.innerHTML = "";
-      episodes.filter(ep => ep.title.toLowerCase().includes(value)).forEach((ep, i) => {
-        const btn = document.createElement("button");
-        btn.className = "p-3 bg-purple-700 hover:bg-purple-800 rounded-xl shadow-md text-left";
-        btn.innerHTML = `<strong>${ep.title}</strong>`;
-        btn.onclick = () => {
-          currentEpisodeIndex = i;
-          player.loadVideoById(ep.link);
-        };
-        list.appendChild(btn);
+    function searchEpisodes(){
+      const v = document.getElementById('searchBox').value.toLowerCase();
+      const list = document.getElementById('episodeList');
+      Array.from(list.children).forEach(btn=>{
+        btn.style.display = btn.textContent.toLowerCase().includes(v)?'':'none';
       });
     }
 
-    function handleStateChange(event) {
-      if (event.data === YT.PlayerState.ENDED) playNextEpisode();
+    function togglePanel(){
+      document.getElementById('sidePanel').classList.toggle('active');
     }
-
-    function cycleTheme() {
-      const body = document.body;
-      body.classList.remove(...themes[currentTheme]);
-      currentTheme = (currentTheme + 1) % themes.length;
-      body.classList.add(...themes[currentTheme]);
+    function setTheme(bg,txt){
+      document.body.className=''; document.body.classList.add(bg,txt);
     }
-
-    function toggleNeon() {
+    function toggleNeon(color){
       document.body.classList.toggle('neon');
+      document.body.style.setProperty('--tw-text-opacity','1');
+      document.body.style.color = color;
     }
-  </script></body>
+  </script>
+</body>
 </html>
